infra/k8s/skilltrade-auth-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: skilltrade-auth-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: skilltrade-auth
  template:
    metadata:
      labels:
        app: skilltrade-auth
    spec:
      containers:
        - name: skilltrade-auth
          image: whispernet/skilltrade-auth
---
apiVersion: v1
kind: Service
metadata:
  name: skilltrade-auth-srv
spec:
  selector:
    app: skilltrade-auth
  ports:
    - name: skilltrade-auth
      port: 3000
      targetPort: 3000
