infra/k8s/skilltrade-auth-mongodb-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: skilltrade-auth-mongodb-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: skilltrade-auth-mongodb
  template:
    metadata:
      labels:
        app: skilltrade-auth-mongodb
    spec:
      containers:
        - name: skilltrade-auth-mongodb
          image: mongo
---
apiVersion: v1
kind: Service
metadata:
  name: skilltrade-auth-mongodb-srv
spec:
  selector:
    app: skilltrade-auth-mongodb
  ports:
    - name: db
      protocol: TCP
      port: 27017
      targetPort: 27017
