infra/k8s/skilltrade-community-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: skilltrade-community-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: skilltrade-community
  template:
    metadata:
      labels:
        app: skilltrade-community
    spec:
      containers:
        - name: skilltrade-community
          image: whispernet/skilltrade-community
---
apiVersion: v1
kind: Service
metadata:
  name: skilltrade-community-srv
spec:
  selector:
    app: skilltrade-community
  ports:
    - name: skilltrade-community
      port: 3000
      targetPort: 3000
