infra/k8s/skilltrade-connection-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: skilltrade-connection-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: skilltrade-connection
  template:
    metadata:
      labels:
        app: skilltrade-connection
    spec:
      containers:
        - name: skilltrade-connection
          image: whispernet/skilltrade-connection
---
apiVersion: v1
kind: Service
metadata:
  name: skilltrade-connection-srv
spec:
  selector:
    app: skilltrade-connection
  ports:
    - name: skilltrade-connection
      port: 3000
      targetPort: 3000
