infra/k8s/skilltrade-payments-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: skilltrade-payments-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: skilltrade-payments
  template:
    metadata:
      labels:
        app: skilltrade-payments
    spec:
      containers:
        - name: skilltrade-payments
          image: whispernet/skilltrade-payments
---
apiVersion: v1
kind: Service
metadata:
  name: skilltrade-payments-srv
spec:
  selector:
    app: skilltrade-payments
  ports:
    - name: skilltrade-payments
      port: 3000
      targetPort: 3000
